--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <!-- Styles Mapa Leaflet -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
 
-    <title>Panaderia</title>
+    <title>Panaderia Dibe</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
